Hide subscription manager plugin link

--- a/wp-content/themes/maine-learning-sites/style.css
+++ b/wp-content/themes/maine-learning-sites/style.css
@@ -1798,3 +1798,9 @@ img.float-left-flex
 	margin-bottom: 0px;
 	padding: 9px 5px 0 0;
 }
+
+/* SUBSCRIPTION MANAGER */
+
+#subscription-manager b {
+	display:  none;
+}
