--- a/wp-content/themes/maine-learning-home/style.css
+++ b/wp-content/themes/maine-learning-home/style.css
@@ -460,7 +460,7 @@ BP PANELS: PROFILE: CHANGE AVATAR
 ----------------------- */
 
 .profile p {
-	margin: 0 14px 0 14px;
+	margin: 0 0 10px 12px;
 }
 
 
