--- a/wp-content/plugins/gravityforms/css/admin.css
+++ b/wp-content/plugins/gravityforms/css/admin.css
@@ -4,10 +4,10 @@
 admin.css
 Gravity Forms Administration Form Styles
 http: //www.gravityforms.com
-updated: January 23, 2012 12:59 PM
+updated: March 20, 2012 12:08 PM
 
 Gravity Forms is a Rocketgenius project
-copyright 2011 Rocketgenius Inc.
+copyright 2012 Rocketgenius Inc.
 http: //www.rocketgenius.com
 this may not be re-distrubited without the
 express written permission of the author.
@@ -1215,14 +1215,14 @@ a.bulk-choice:first-child {
 }
 .bulk-arrow-mid {
 	float: left;
-	width: 45px;
+	width: 40px;
 	height: 330px;
 	background-image: url(../images/arrow-right.jpg);
-	background-position: 50% 50%;
+	background-position: 100% 50%;
 	background-repeat: no-repeat
 }
 textarea#gfield_bulk_add_input {
-	width: 330px;
+	width: 320px;
 	height: 330px;
 	float: right;
 	padding: 6px
@@ -2473,7 +2473,7 @@ div.wrap.gf_browser_ie .gfield_checkbox li input {
 	height: 300px
 }
 textarea#gfield_bulk_add_input {
-	width: 330px;
+	width: 320px;
 	height: 290px
 }
 #TB_ajaxContent {
@@ -2622,18 +2622,25 @@ html body.wp-admin div#wpwrap div#wpcontent div#wpbody div#wpbody-content form#e
 	margin-top: 20px !important
 }
 html body.wp-admin div#wpwrap #wp-form_notification_message-media-buttons.hide-if-no-js.wp-media-buttons {
-	border: 1px solid #EEE;
-	padding: 3px 6px 3px 8px !important;
 	position: absolute;
-	top:-10px;
+    top: -2px;
 	left:0;
+    width: 280px !important;
+	padding: 3px 4px 3px 6px !important;
 	background-color: #E9E9E9;
-	background-image: -moz-linear-gradient(center bottom , #DDDDDD, #E9E9E9);
-	border: 1px solid #CCCCCC;
-	border-bottom: 1px solid #CCCCCC;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px
+	border-left: 1px solid #CCCCCC;
+	border-top: 1px solid #CCCCCC;
+	border-right: 1px solid #CCCCCC;
+	-webkit-border-top-left-radius: 3px;
+	-webkit-border-top-right-radius: 3px;
+	-moz-border-radius-topleft: 3px;
+	-moz-border-radius-topright: 3px;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+html body.rtl.wp-admin div#wpwrap #wp-form_notification_message-media-buttons.hide-if-no-js.wp-media-buttons {
+    	left: auto !important;
+    	right: 0
 }
 html body.wp-admin div#wp-form_notification_message-editor-tools.wp-editor-tools {
 	position: relative
@@ -2643,7 +2650,7 @@ html body.wp-admin div#wpwrap div#form_notification_admin_container ul#form_noti
 	background-image: url(../images/gf_media_button_bg.jpg);
 	background-repeat: repeat-x;
 	background-position: bottom;
-	padding:4px 7px 3px 6px !important;
+	padding:3px 6px 2px 5px !important;
 	border: 1px solid #C3C3C3;
 	border-bottom: 2px solid #CCCCCC;
 	color: #464646;
