Upgraded Homesite styles with tweaks from custom CSS

--- a/wp-content/themes/maine-learning-home/style.css
+++ b/wp-content/themes/maine-learning-home/style.css
@@ -236,12 +236,18 @@ h2
 	letter-spacing: .2px;
 }
 
+h2.pagetitle
+{
+  font-size: 22px;
+  margin-top: 10px;
+}
+
 h2.posttitle { font-size: 24px; }
 
 h3
 {
 	font-family: 'Cabin',arial,serif;
-	font-size: 14px;
+	font-size: 18px;
 	letter-spacing: .2px;
 }
 
@@ -344,22 +350,30 @@ div#item-header img.avatar
 	width: 100px;
 }
 
-div#item-header div#item-header-content { margin-left: 120px; }
+
 div#item-header h2 { font-size: 22px; }
+
+
+
+div#item-header div#item-header-content {
+	margin-left: 130px;
+}
 
 div#item-header div#item-meta
 {
+	border-top: 1px solid #ddd;
 	color: #888888;
+	display:  inline-block;
 	font-size: 13px;
-	margin: 20px 0 0 0;
-	padding-bottom: 0px;
-	width: 80%;
+	margin: 14px 0 0 0;
+	padding: 10px 0 20px 0;
+	width: 590px;
 }
 
 #item-meta p
 {
 	float: left;
-	width: 70%;
+	width: 420px;
 }
 
 div#item-header div#item-actions
@@ -368,7 +382,12 @@ div#item-header div#item-actions
 	margin: 0 0 0px 15px;
 }
 
-div#item-header span.activity, div#item-header h2 span.highlight { margin-bottom: 0px; }
+div#item-header span.activity, div#item-header h2 span.highlight
+{ 
+	margin-bottom: 0px;
+	vertical-align: top;
+}
+   
 .dir-form h3 { font-size: 18px; }
 .activity-list .activity-content .activity-header, .activity-list .activity-content .comment-header { font-size: 12px; }
 
@@ -390,6 +409,14 @@ BUDDYPRESS PANELS: ITEMS
 div.pagination { margin: 0; }
 span.activity, div#message p { background: -moz-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)) repeat scroll 0 0 #fff0bf; }
 span.activity, div#message p { border: 1px solid #E1CA82; }
+
+#message-thread { margin: 10px 10px 10px 14px; }
+
+table#message-threads { margin: 0; }
+
+.standard-form textarea {
+margin-left: 20px;
+}
 
 /* ----------------------
 BUDDYPRESS PANELS: TABS
@@ -455,6 +482,14 @@ div#subnav.item-list-tabs
 	margin-bottom: 4px;
 }
 
+div#item-header div.generic-button, div#item-header a.button
+{
+  float: right;
+  margin: 10px 0 10px 0;
+}
+
+#item-buttons { width: auto; }
+
 /* ----------------------
 BP PANELS: PROFILE: CHANGE AVATAR
 ----------------------- */
@@ -472,18 +507,31 @@ div.activity {
 }
 
 div.activity-avatar {
-	margin: 20px 0 0 16px;
+	margin: 6px 0 0 16px;
+}
+
+div.activity-comments div.acomment-content {
+font-size: 12px;
 }
 
 /* ----------------------
 BP PANELS: GROUP DIRECTORY
 ----------------------- */
 
-#groups-list .item-avatar { display: none; }
+#groups-list .item-avatar { display: block; }
+
+form#groups-directory-form h3 a { display: none; }
+
 
 /* ----------------------
 BP PANELS: SITES
 ----------------------- */
+
+ul.item-list
+{
+  padding: 0 20px 0 20px;
+  width: 94%;
+}
 
 ul.item-list li div.meta
 {
@@ -494,8 +542,12 @@ ul.item-list li div.meta
 }
 
 /* ----------------------
-BP PANELS: BLOG PAGES
+BP PANELS: BLOGS
 ----------------------- */
+
+div#blogs-dir-list div.item-avatar {
+  display: none;
+}
 
 #blog-pages { margin: 10px 0 0 0 !important; }
 #item-body { background-color: #f4f4f4; }
@@ -510,6 +562,10 @@ BP PANELS: FORUM POSTS
 
 table.forum { margin: 0; }
 
+table.forum tr td.td-title a.topic-title {
+font-size: 1em;
+}
+
 div#topic-meta div.admin-links
 {
 	right: 19px;
@@ -523,13 +579,69 @@ div#topic-meta
 	position: relative;
 }
 
+div#topic-meta h3 { width: 60%; }
+
+form#forum-topic-form { margin: 0; }
+
 .ass-topic-subscribe { margin-top: 4px !important; }
+
+div.generic-button.ass-topic-subscribe a {
+border: 0px solid #fff;
+}
+
+p:last-child {
+ margin-bottom: 0;
+ margin-right: 20px;
+}
 
 /* ----------------------
 BP PANELS: ALERT BOXES
 ----------------------- */
 
 div#message.updated p { background-color: #ffdfb1; }
+
+/* ----------------------
+BP PANELS: BUDDYVENTS
+----------------------- */
+
+
+#events-dir-list ul.item-list li div.item-title span.summary { font-size: 18px; }
+
+#events-dir-list ul.item-list li div.item-desc
+{
+  display: inline;
+  font-size: 12px;
+  height: 0;
+}
+
+#events-dir-list .event-meta { font-size: 12px; }
+
+table#approve-events { margin: 0 -19px 0; }
+
+a.approve { line-height: 40px; }
+
+
+/* ----------------------
+BP PANELS: BP-MODERATION
+----------------------- */
+
+.bpm-unflagged .bpm-inner-text {
+  background-position: 0 0;
+  float: right;
+  margin: 0 10px 10px 0;
+}
+
+/* ----------------------
+BP PANELS: BP GROUP DOCS
+----------------------- */
+
+#bp-group-documents h3 {
+  padding: 20px 0 0 20px;
+}
+
+#bp-group-documents-categories, #bp-group-documents-sorting {
+  margin-top: 20px;
+}
 
 /* ----------------------
 SIDEBAR
